# dbe-ai-expert-system

./: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_PROGRESS.md  README.md  TODO.md  epics.md  pyproject.toml  requirements.txt  roadmap.md
.github/: copilot-instructions.md
.github/hooks/: agent-lifecycle.json
.github/workflows/: infrastructure.yml
audits/roadmaps/roadmaps/: example_roadmap.md
docs/: architecture.md
helm/dbe-agent-orchestrator/: Chart.yaml  values.yaml
helm/dbe-agent-orchestrator/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
infrastructure/: backend.tf  main.tf  variables.tf
infrastructure/apim/: policy.xml  routes.json
infrastructure/kubernetes/: deployment.yaml
scripts/: compliance_checks.ps1  security_audit.ps1
src/: __init__.py
src/ingestion/: __init__.py  graph_manager.py  pipeline.py
src/models/: __init__.py  expert_model.py
src/optimization/: __init__.py  feedback_loop.py  lineage_tracker.py
src/orchestration/: __init__.py  main.py
tests/: __init__.py  e2e_flow_helpers.py  test_graph_integration.py  test_ingestion.py  test_models.py  test_orchestration.py
